feat: add independent live recording
